# Dpubsub

./: CMakeLists.txt  LICENSE  README.md  client.c  client.h  client_tcp_api.c  client_tcp_api.h  packets.c  packets.h  receiver.h
EXPERIMENTAL/quic_conn/: CMakeLists.txt  install_project.sh  quic_client_ngtcp2.c
cmake/: dpubsubConfig.cmake.in
docs/EN/: Tests.md  build.md
docs/PT-BR/: Compilando.md  testes.md
docs/api/: connect_client.md  create_client.md  destroy_client.md  disconnect_client.md  publish.md  receive_message.md  subscribe_topic.md  unsubscribe_topic.md
examples/: CMakeLists.txt
examples/tcp/: CMakeLists.txt  mqtt_tcp.c
lib/src/: client.c  client.h  client_tcp_api.c  client_tcp_api.h  packets.c  packets.h
lib/src/include/: dpubsub.c  dpubsub.h
lib/src/transport/tcp/: CMakeLists.txt  tcp_server.c
lib/src/transport/tcp/tests/: CMakeLists.txt  client.c  recv_data_server_test.c
tests/: CMakeLists.txt  api_test.c  client_test.c
transport/tcp/: tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
transport/tcp/tests/: CMakeLists.txt  client.c  recv_data_server_test.c  send_data_to_server_test.c  server.c
